@@ -1,9 +1,11 @@
 package com.comet.opik.api.resources.v1.events;
 
-import com.comet.opik.api.FeedbackScoreBatchItem;
 import com.comet.opik.api.PromptType;
 import com.comet.opik.api.ScoreSource;
 import com.comet.opik.api.Trace;
+import com.comet.opik.api.evaluators.LlmAsJudgeMessage;
+import com.comet.opik.domain.evaluators.python.TraceThreadPythonEvaluatorRequest;
+import com.comet.opik.domain.llm.structuredoutput.StructuredOutputStrategy;
 import com.comet.opik.utils.TemplateParseUtils;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -13,15 +15,6 @@ import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.data.message.SystemMessage;
 import dev.langchain4j.data.message.UserMessage;
 import dev.langchain4j.model.chat.request.ChatRequest;
-import dev.langchain4j.model.chat.request.ResponseFormat;
-import dev.langchain4j.model.chat.request.ResponseFormatType;
-import dev.langchain4j.model.chat.request.json.JsonBooleanSchema;
-import dev.langchain4j.model.chat.request.json.JsonIntegerSchema;
-import dev.langchain4j.model.chat.request.json.JsonNumberSchema;
-import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
-import dev.langchain4j.model.chat.request.json.JsonSchema;
-import dev.langchain4j.model.chat.request.json.JsonSchemaElement;
-import dev.langchain4j.model.chat.request.json.JsonStringSchema;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
@@ -29,6 +22,7 @@ import lombok.Builder;
 import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
 
+import java.io.UncheckedIOException;
 import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.Collections;
@@ -37,12 +31,15 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Spliterator;
 import java.util.Spliterators;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
-import static com.comet.opik.api.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeCode;
-import static com.comet.opik.api.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeMessage;
-import static com.comet.opik.api.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeOutputSchema;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
+import static com.comet.opik.api.evaluators.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeCode;
+import static com.comet.opik.api.evaluators.AutomationRuleEvaluatorTraceThreadLlmAsJudge.TraceThreadLlmAsJudgeCode;
 
 @UtilityClass
 @Slf4j
@@ -51,11 +48,10 @@ public class OnlineScoringEngine {
     static final String SCORE_FIELD_NAME = "score";
     static final String REASON_FIELD_NAME = "reason";
 
-    private static final String SCORE_FIELD_DESCRIPTION = "the score for ";
-    private static final String REASON_FIELD_DESCRIPTION = "the reason for the score for ";
-    private static final String DEFAULT_SCHEMA_NAME = "scoring_schema";
-
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
+
+    private static final Pattern JSON_BLOCK_PATTERN = Pattern.compile(
+            "```(?:json)?\\s*(\\{.*?})\\s*```", Pattern.DOTALL);
 
     /**
      * Prepare a request to a LLM-as-Judge evaluator (a ChatLanguageModel) rendering the template messages with
@@ -66,13 +62,67 @@ public class OnlineScoringEngine {
      * @return a request to trigger to any supported provider with a ChatLanguageModel
      */
     public static ChatRequest prepareLlmRequest(
-            @NotNull LlmAsJudgeCode evaluatorCode, Trace trace) {
-        var responseFormat = toResponseFormat(evaluatorCode.schema());
+            @NotNull LlmAsJudgeCode evaluatorCode, Trace trace, StructuredOutputStrategy structuredOutputStrategy) {
         var renderedMessages = renderMessages(evaluatorCode.messages(), evaluatorCode.variables(), trace);
-        return ChatRequest.builder()
-                .messages(renderedMessages)
-                .responseFormat(responseFormat)
-                .build();
+        var chatRequestBuilder = ChatRequest.builder().messages(renderedMessages);
+
+        return structuredOutputStrategy.apply(chatRequestBuilder, renderedMessages, evaluatorCode.schema()).build();
+    }
+
+    /**
+     * Prepare a request to a LLM-as-Judge evaluator (a ChatLanguageModel) rendering the template messages with
+     * Trace variables and with the proper structured output format.
+     *
+     * @param evaluatorCode the LLM-as-Judge 'code'
+     * @param traces the sampled traces from the trace threads to be scored
+     * @return a request to trigger to any supported provider with a ChatLanguageModel
+     */
+    public static ChatRequest prepareThreadLlmRequest(
+            @NotNull TraceThreadLlmAsJudgeCode evaluatorCode, @NotNull List<Trace> traces,
+            @NotNull StructuredOutputStrategy structuredOutputStrategy) {
+        var renderedMessages = renderThreadMessages(evaluatorCode.messages(),
+                Map.of(TraceThreadLlmAsJudgeCode.CONTEXT_VARIABLE_NAME, ""), traces);
+        var chatRequestBuilder = ChatRequest.builder().messages(renderedMessages);
+
+        return structuredOutputStrategy.apply(chatRequestBuilder, renderedMessages, evaluatorCode.schema()).build();
+    }
+
+    static List<ChatMessage> renderThreadMessages(
+            List<LlmAsJudgeMessage> templateMessages, Map<String, String> variablesMap, List<Trace> traces) {
+        // prepare the map of replacements to use in all messages
+        Map<String, String> replacements = variablesMap.keySet().stream()
+                .map(variableName -> switch (variableName) {
+                    case TraceThreadLlmAsJudgeCode.CONTEXT_VARIABLE_NAME -> {
+                        try {
+                            yield MessageVariableMapping.builder()
+                                    .variableName(variableName)
+                                    .valueToReplace(OBJECT_MAPPER.writeValueAsString(fromTraceToThread(traces)))
+                                    .build();
+                        } catch (JsonProcessingException ex) {
+                            throw new UncheckedIOException(ex);
+                        }
+                    }
+                    default -> throw new IllegalArgumentException("Invalid variable name: " + variableName);
+                })
+                .collect(
+                        Collectors.toMap(MessageVariableMapping::variableName, MessageVariableMapping::valueToReplace));
+
+        // render the message templates from evaluator rule
+        return templateMessages.stream()
+                .map(templateMessage -> {
+                    var renderedMessage = TemplateParseUtils.render(
+                            templateMessage.content(), replacements, PromptType.MUSTACHE);
+                    return switch (templateMessage.role()) {
+                        case USER -> UserMessage.from(renderedMessage);
+                        case SYSTEM -> SystemMessage.from(renderedMessage);
+                        default -> {
+                            log.info("No mapping for message role type {}", templateMessage.role());
+                            yield null;
+                        }
+                    };
+                })
+                .filter(Objects::nonNull)
+                .toList();
     }
 
     /**
@@ -89,7 +139,7 @@ public class OnlineScoringEngine {
     static List<ChatMessage> renderMessages(
             List<LlmAsJudgeMessage> templateMessages, Map<String, String> variablesMap, Trace trace) {
         // prepare the map of replacements to use in all messages
-        var replacements = toReplacements(variablesMap, trace);
+        Map<String, String> replacements = toReplacements(variablesMap, trace);
         // render the message templates from evaluator rule
         return templateMessages.stream()
                 .map(templateMessage -> {
@@ -169,46 +219,22 @@ public class OnlineScoringEngine {
         }
     }
 
-    static ResponseFormat toResponseFormat(@NotNull List<LlmAsJudgeOutputSchema> schema) {
-        // convert <name, type, description> into something like
-        // "${name}": { "score": { "type": "${type}" , "description": ${description}", "reason": { "type" : "string" }}
-        Map<String, JsonSchemaElement> structuredFields = schema.stream()
-                .map(scoreDefinition -> Map.entry(scoreDefinition.name(),
-                        JsonObjectSchema.builder()
-                                .description(scoreDefinition.description())
-                                .required(SCORE_FIELD_NAME, REASON_FIELD_NAME)
-                                .addProperties(Map.of(
-                                        SCORE_FIELD_NAME, switch (scoreDefinition.type()) {
-                                            case BOOLEAN -> JsonBooleanSchema.builder()
-                                                    .description(SCORE_FIELD_DESCRIPTION + scoreDefinition.name())
-                                                    .build();
-                                            case INTEGER -> JsonIntegerSchema.builder()
-                                                    .description(SCORE_FIELD_DESCRIPTION + scoreDefinition.name())
-                                                    .build();
-                                            case DOUBLE -> JsonNumberSchema.builder()
-                                                    .description(SCORE_FIELD_DESCRIPTION + scoreDefinition.name())
-                                                    .build();
-                                        },
-                                        REASON_FIELD_NAME,
-                                        JsonStringSchema.builder()
-                                                .description(REASON_FIELD_DESCRIPTION + scoreDefinition.name())
-                                                .build()))
-                                .build()
-
-                ))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-        var allPropertyNames = structuredFields.keySet().stream().toList();
-        var schemaBuilder = JsonObjectSchema.builder().required(allPropertyNames).addProperties(structuredFields)
-                .build();
-        var jsonSchema = JsonSchema.builder().name(DEFAULT_SCHEMA_NAME).rootElement(schemaBuilder).build();
-        return ResponseFormat.builder()
-                .type(ResponseFormatType.JSON)
-                .jsonSchema(jsonSchema)
-                .build();
+    public static List<TraceThreadPythonEvaluatorRequest.ChatMessage> fromTraceToThread(List<Trace> traces) {
+        return traces.stream()
+                .flatMap(trace -> Stream.of(
+                        TraceThreadPythonEvaluatorRequest.ChatMessage.builder()
+                                .role(TraceThreadPythonEvaluatorRequest.ROLE_USER)
+                                .content(trace.input())
+                                .build(),
+                        TraceThreadPythonEvaluatorRequest.ChatMessage.builder()
+                                .role(TraceThreadPythonEvaluatorRequest.ROLE_ASSISTANT)
+                                .content(trace.output())
+                                .build()))
+                .toList();
     }
 
     public static List<FeedbackScoreBatchItem> toFeedbackScores(@NotNull ChatResponse chatResponse) {
-        var content = chatResponse.aiMessage().text();
+        var content = extractJson(chatResponse.aiMessage().text());
         JsonNode structuredResponse;
         try {
             structuredResponse = OBJECT_MAPPER.readTree(content);
@@ -243,7 +269,17 @@ public class OnlineScoringEngine {
                     return resultBuilder.build();
                 })
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    private static String extractJson(String response) {
+        Matcher matcher = JSON_BLOCK_PATTERN.matcher(response);
+        if (matcher.find()) {
+            return matcher.group(1);
+        }
+
+        // Assume the whole response is raw JSON
+        return response.trim();
     }
 
     @AllArgsConstructor
